--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   		<figure class="banner">
   			<img src="images/Jumaane.jpg" alt="African American Day Parade" width=650px>
-  			<figcaption class="bannerCaption">Photo: Mariam Hydara</figcaption>
+  			<figcaption class="bannerCaption">Jumaane Williams Marching in the African American Day Parade - Photo: Mariam Hydara</figcaption>
   		</figure>
 
   	</header>
